--- a/collapsiblecalendarview2/src/main/res/layout/day_layout.xml
+++ b/collapsiblecalendarview2/src/main/res/layout/day_layout.xml
@@ -26,8 +26,8 @@
 
         <ImageView
             android:id="@+id/img_event_tag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="2dp"
+            android:layout_height="2dp"
             app:srcCompat="@drawable/dot_icon"
             android:visibility="gone" />
 
