--- a/collapsiblecalendarview2/src/main/res/layout/day_layout.xml
+++ b/collapsiblecalendarview2/src/main/res/layout/day_layout.xml
@@ -9,8 +9,8 @@
 
     <TextView
         android:id="@+id/txt_day"
-        android:layout_width="@dimen/day_circle_width"
-        android:layout_height="@dimen/day_circle_height"
+        android:layout_width="3dp"
+        android:layout_height="3dp"
         android:gravity="center"
         android:textSize="13sp"
         android:textColor="@android:color/black"
@@ -26,8 +26,8 @@
 
         <ImageView
             android:id="@+id/img_event_tag"
-            android:layout_width="2dp"
-            android:layout_height="2dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:srcCompat="@drawable/dot_icon"
             android:visibility="gone" />
 
